@@ -194,6 +194,18 @@ setLogLevel l = do i <- get
                    let opt' = opts { opt_logLevel = l }
                    put (i { idris_options = opt' } )
 
+setCmdLine :: [Opt] -> Idris ()
+setCmdLine opts = do i <- get
+                     let iopts = idris_options i
+                     put (i { idris_options = iopts { opt_cmdline = opts } })
+
+getDumpC :: Idris (Maybe FilePath)
+getDumpC = do i <- get
+              return $ findC (opt_cmdline (idris_options i))
+    where findC [] = Nothing
+          findC (DumpC x : _) = Just x
+          findC (_ : xs) = findC xs
+
 logLevel :: Idris Int
 logLevel = do i <- get
               return (opt_logLevel (idris_options i))
